progress bar functioning

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,19 +1,18 @@
-.nav {
+.navbar-nav {
   /* flex box layout */
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   margin: 0 0 30px;
   background-color: #00acb0;
   overflow: hidden;
 }
 
-.nav a {
+.navbar-nav a {
   text-decoration: none;
 }
 
-.nav-title {
+.navbar-title {
   font-size: 24px;
   font-weight: 700;
   color: #f2f2f2;
@@ -21,7 +20,7 @@
   margin: 0;
 }
 
-.navLink {
+.navbar-link {
   display: inline-block;
   color: #f2f2f2;
   background-color: #00acb0;
@@ -29,14 +28,11 @@
   padding: 24px 10px;
   text-decoration: none;
   font-size: 15px;
-
-  /* these last two make the logout button in
-  the nav bar look like another link */
   border: none;
   cursor: pointer;
   outline: 0;
 }
 
-.navLink:hover {
+.navbar-link:hover {
   background-color: #008183;
 }
