--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,38 +1,64 @@
 .navbar-nav {
-  /* flex box layout */
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 0 0 30px;
-  background-color: #00acb0;
+  background-color: #0c4532;
   overflow: hidden;
+  padding-inline: 0 10px;
+  flex-direction: row;
+  padding: 30px 0 30px 0;
+  border-bottom: 2px solid rgb(255, 204, 0);
+}
+
+.navbar-left {
+  display: flex;
+  align-items: left !important;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: right !important;
 }
 
 .navbar-nav a {
+  align-items: center;
+  display: flex;
   text-decoration: none;
 }
 
 .navbar-title {
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 5rem;
+  font-weight: 400;
   color: #f2f2f2;
+  padding-top: 10px;
   padding-left: 10px;
   margin: 0;
 }
 
 .navbar-link {
+  margin-left: 50px;
   display: inline-block;
   color: #f2f2f2;
-  background-color: #00acb0;
+  background-color: #0c4532b6;
   text-align: center;
-  padding: 24px 10px;
+  padding: 28px 10px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 17px;
   border: none;
   cursor: pointer;
   outline: 0;
 }
 
 .navbar-link:hover {
-  background-color: #008183;
+  background-color: #b5c5b6;
+}
+
+.logo {
+  width: 100px;
+  height: auto;
+  display: inline-block;
+  margin-right: 20px;
+  margin-left: 20px;
+  border-radius: 50%;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
